Fixed some spacing in the nav and some spacing in the info section

--- a/styling.css
+++ b/styling.css
@@ -3,24 +3,30 @@
 
 /* Navigation bar with logo */
 .nav-bar {
+    margin: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100px;
     flex-direction: row;
+    max-width: 85%;
 }
 
 .nav-bar img {
-    padding-right: 900px;
     margin: 0;
+    margin-right: 800px;
     width: 250px;
 }
 
 .nav-bar a {
     font-size: 34px;
     font-weight: bold;
-    padding-inline: 40px;
     color: white;
+}
+
+.navinfo {
+    padding-right: 40px;
+    margin-left: 100px;
 }
 
 .nav-bar a:hover {
@@ -54,8 +60,9 @@ hr {
 }
 
 .info-text {
+    max-width: 80%;
     height: 300px;
-    padding-inline: 200px;
+    padding-inline: 120px;
 }
 
 .info-text h1 {
